Made holoviews.Image work like holoviews.Raster by reversing first axis of data array and setting option invert_yaxis=True. No longer need to hack x/y axis swapping, just need to set invert_axes=False (which seems to be set when we create an AdjointLayout by <<'ing). Works with sharpness plot. invert_yaxis=True breaks PointerY, this seems to be a HoloViews bug (reported as https://github.com/ioam/holoviews/issues/2211).
Also see https://github.com/ioam/holoviews/issues/1534 and (less relevant) https://github.com/ioam/holoviews/issues/155.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/171218 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/171218 Prototyping.ipynb
@@ -736,51 +736,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "layout.opts??"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.Image?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = get_trench_thumbnail(img_series[1], trench_points, 15)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%%opts Image (cmap='viridis')\n",
     "def scrubber(t, y):\n",
     "    t = int(t)\n",
@@ -789,8 +744,7 @@
     "        style={\"color\": \"white\", \"text_alpha\": 0.8}\n",
     "    )\n",
     "    h_line = hv.HLine(y)(style={\"color\": \"white\", \"alpha\": 0.3, \"line_width\": 2})\n",
-    "    # return v_line * t_label * h_line\n",
-    "    return hv.VLine(10)\n",
+    "    return v_line * t_label * h_line\n",
     "\n",
     "\n",
     "def cross_section(t, y):\n",
@@ -805,18 +759,19 @@
     "    return v_line\n",
     "\n",
     "\n",
-    "max_thumbnail_width = 100\n",
-    "\n",
-    "\n",
     "def trench_thumbnail(img_series, t):\n",
     "    t = int(t)\n",
     "    img = get_trench_thumbnail(img_series[t], trench_points, trench_idx)\n",
     "    # TODO: don't know why calling hv.Image.opts(plot={'invert_axes': True}) doesn't work\n",
     "    # also switched HLine to VLine in cross_section, above\n",
-    "    print(img.shape)\n",
-    "    thumb = hv.Raster(img, kdims=[\"y\", \"x\"])\n",
-    "    return thumb\n",
+    "    thumb = hv.Image(\n",
+    "        img[::-1], bounds=(0, 0, img.shape[1], img.shape[0]), kdims=[\"x2\", \"y\"]\n",
+    "    )\n",
+    "    # return thumb\n",
     "    # return thumb.opts(plot={'invert_axes': False, 'width': max_thumbnail_width})#, 'xaxis': None, 'yaxis': None})\n",
+    "    return thumb.opts(\n",
+    "        plot={\"invert_axes\": False, \"invert_yaxis\": True, \"width\": 100}\n",
+    "    )  # , 'xaxis': None, 'yaxis': None})\n",
     "\n",
     "\n",
     "pointerx = hv.streams.PointerX(x=0).rename(x=\"t\")\n",
@@ -828,9 +783,10 @@
     "kymo = extract_kymograph(\n",
     "    img_series, trench_points[0][trench_idx], trench_points[1][trench_idx]\n",
     ")\n",
-    "kymo_img = hv.Image(kymo, bounds=(-1, -1, 1, 1)).opts(\n",
-    "    plot={\"width\": 700, \"height\": 300, \"yaxis\": \"left\"}\n",
+    "kymo_img = hv.Image(kymo[::-1], bounds=(0, 0, kymo.shape[1], kymo.shape[0])).opts(\n",
+    "    plot={\"width\": 700, \"height\": 300, \"invert_yaxis\": True}\n",
     ")\n",
+    "# kymo_img = hv.Raster(kymo).opts(plot={'width': 700, 'height': 300, 'yaxis': 'left'})\n",
     "scrubber_line = hv.DynamicMap(scrubber, streams=[pointerx, pointery])\n",
     "cross_section_line = hv.DynamicMap(cross_section, streams=[pointerx, pointery])\n",
     "trench_thumbnail_img = hv.DynamicMap(\n",
@@ -840,8 +796,14 @@
     "    plot={\"width\": 700, \"height\": 100}\n",
     ")\n",
     "sharpness_scrubber = hv.DynamicMap(sharpness_scrubber, streams=[pointerx])\n",
+    "# pointery.source = kymo_img\n",
     "# SEE: http://holoviews.org/reference/elements/bokeh/Distribution.html\n",
-    "kymo_img  # * scrubber_line# << (trench_thumbnail_img * cross_section_line)# << (sharpness_plot * sharpness_scrubber)"
+    "# kymo_img * scrubber_line << (trench_thumbnail_img * cross_section_line) << (sharpness_plot * sharpness_scrubber)\n",
+    "(\n",
+    "    kymo_img * scrubber_line\n",
+    "    << (trench_thumbnail_img * cross_section_line)\n",
+    "    << (sharpness_plot * sharpness_scrubber)\n",
+    ")"
    ]
   },
   {
@@ -850,7 +812,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%opts Image (cmap='viridis')\n",
+    "pointery.contents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(pointery.y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %%opts Image (cmap='viridis')\n",
     "img_series = frame_series\n",
     "kymo = extract_kymograph(\n",
     "    img_series, trench_points[0][trench_idx], trench_points[1][trench_idx]\n",
