Might have trench line plotting on thumbnail image working. Still having problems compositing it with the kymograph scrubber.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/171218 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/171218 Prototyping.ipynb
@@ -660,13 +660,13 @@
    "outputs": [],
    "source": [
     "def bounding_box(points):\n",
-    "    bottom_left_x = min(point[0] for point in points)\n",
-    "    bottom_left_y = min(point[1] for point in points)\n",
-    "    top_right_x = max(point[0] for point in points)\n",
-    "    top_right_y = max(point[1] for point in points)\n",
+    "    upper_left_x = min(point[0] for point in points)\n",
+    "    upper_left_y = min(point[1] for point in points)\n",
+    "    lower_right_x = max(point[0] for point in points)\n",
+    "    lower_right_y = max(point[1] for point in points)\n",
     "    return (\n",
-    "        np.array([bottom_left_x, bottom_left_y]),\n",
-    "        np.array([top_right_x, top_right_y]),\n",
+    "        np.array([upper_left_x, upper_left_y]),\n",
+    "        np.array([lower_right_x, lower_right_y]),\n",
     "    )\n",
     "\n",
     "\n",
@@ -676,8 +676,8 @@
     "\n",
     "def get_trench_thumbnail(img, trench_points, trench_idx):\n",
     "    x_lim, y_lim = get_img_limits(img)\n",
-    "    y0, y1 = get_trench_bbox(trench_points, trench_idx, x_lim, y_lim)\n",
-    "    return img[y0[1] : y1[1], y0[0] : y1[0]]\n",
+    "    ul, lr = get_trench_bbox(trench_points, trench_idx, x_lim, y_lim)\n",
+    "    return img[ul[1] : lr[1], ul[0] : lr[0]]\n",
     "\n",
     "\n",
     "def get_trench_bbox(trench_points, trench_idx, x_lim, y_lim):\n",
@@ -737,7 +737,7 @@
    "outputs": [],
    "source": [
     "%%opts Image (cmap='viridis')\n",
-    "def scrubber(t, y):\n",
+    "def scrubber_callback(t, y):\n",
     "    t = int(t)\n",
     "    v_line = hv.VLine(t + 0.5)(style={\"color\": \"white\", \"alpha\": 0.3, \"line_width\": 2})\n",
     "    t_label = hv.Text(t + kymo.shape[1] / 20, kymo.shape[0] / 20, \"t={:}\".format(t))(\n",
@@ -747,19 +747,19 @@
     "    return v_line * t_label * h_line\n",
     "\n",
     "\n",
-    "def cross_section(t, y):\n",
+    "def cross_section_callback(t, y):\n",
     "    y = int(y)\n",
     "    h_line = hv.HLine(y)(style={\"color\": \"white\", \"alpha\": 0.3, \"line_width\": 2})\n",
     "    return h_line\n",
     "\n",
     "\n",
-    "def sharpness_scrubber(t):\n",
+    "def sharpness_scrubber_callback(t):\n",
     "    t = int(t)\n",
     "    v_line = hv.VLine(t + 0.5)(style={\"color\": \"black\", \"alpha\": 0.3, \"line_width\": 2})\n",
     "    return v_line\n",
     "\n",
     "\n",
-    "def trench_thumbnail(img_series, t):\n",
+    "def trench_thumbnail_callback(img_series, t):\n",
     "    t = int(t)\n",
     "    img = get_trench_thumbnail(img_series[t], trench_points, trench_idx)\n",
     "    # TODO: don't know why calling hv.Image.opts(plot={'invert_axes': True}) doesn't work\n",
@@ -770,7 +770,7 @@
     "    # return thumb\n",
     "    # return thumb.opts(plot={'invert_axes': False, 'width': max_thumbnail_width})#, 'xaxis': None, 'yaxis': None})\n",
     "    return thumb.opts(\n",
-    "        plot={\"invert_axes\": False, \"invert_yaxis\": True, \"width\": 100}\n",
+    "        plot={\"invert_axes\": False, \"invert_yaxis\": True, \"width\": 200}\n",
     "    )  # , 'xaxis': None, 'yaxis': None})\n",
     "\n",
     "\n",
@@ -780,6 +780,9 @@
     "# BOUNDS: (left, bottom, top, right)\n",
     "trench_idx = 15\n",
     "img_series = frame_series_k1\n",
+    "bbox_ul, bbox_lr = get_trench_bbox(\n",
+    "    trench_points, trench_idx, *get_img_limits(img_series[0])\n",
+    ")\n",
     "kymo = extract_kymograph(\n",
     "    img_series, trench_points[0][trench_idx], trench_points[1][trench_idx]\n",
     ")\n",
@@ -787,23 +790,51 @@
     "    plot={\"width\": 700, \"height\": 300, \"invert_yaxis\": True}\n",
     ")\n",
     "# kymo_img = hv.Raster(kymo).opts(plot={'width': 700, 'height': 300, 'yaxis': 'left'})\n",
-    "scrubber_line = hv.DynamicMap(scrubber, streams=[pointerx, pointery])\n",
-    "cross_section_line = hv.DynamicMap(cross_section, streams=[pointerx, pointery])\n",
+    "scrubber_line = hv.DynamicMap(scrubber_callback, streams=[pointerx, pointery])\n",
+    "cross_section_line = hv.DynamicMap(cross_section_callback, streams=[pointerx, pointery])\n",
     "trench_thumbnail_img = hv.DynamicMap(\n",
-    "    partial(trench_thumbnail, img_series), streams=[pointerx]\n",
+    "    partial(trench_thumbnail_callback, img_series), streams=[pointerx]\n",
     ")  # .opts(plot={'invert_axes': True})\n",
     "sharpness_plot = hv.Curve(sharpness, kdims=[\"x\"], vdims=[\"s\"]).opts(\n",
     "    plot={\"width\": 700, \"height\": 100}\n",
     ")\n",
-    "sharpness_scrubber = hv.DynamicMap(sharpness_scrubber, streams=[pointerx])\n",
+    "sharpness_scrubber = hv.DynamicMap(sharpness_scrubber_callback, streams=[pointerx])\n",
     "# pointery.source = kymo_img\n",
     "# SEE: http://holoviews.org/reference/elements/bokeh/Distribution.html\n",
     "# kymo_img * scrubber_line << (trench_thumbnail_img * cross_section_line) << (sharpness_plot * sharpness_scrubber)\n",
-    "(\n",
-    "    kymo_img * scrubber_line\n",
-    "    << (trench_thumbnail_img * cross_section_line)\n",
-    "    << (sharpness_plot * sharpness_scrubber)\n",
-    ")"
+    "\n",
+    "KymoOverlayStream = Stream.define(\"KymoOverlayStream\", overlay_enabled=True)\n",
+    "kymo_overlay_stream = KymoOverlayStream()\n",
+    "kymo_overlay_button = widgets.ToggleButton(description=\"Overlay\", value=True)\n",
+    "\n",
+    "\n",
+    "def update_kymo_overlay(change):\n",
+    "    kymo_overlay_stream.event(overlay_enabled=change[\"new\"])\n",
+    "\n",
+    "\n",
+    "kymo_overlay_button.observe(update_kymo_overlay, names=\"value\")\n",
+    "\n",
+    "\n",
+    "def get_thumbnail_overlay(t, overlay_enabled):\n",
+    "    # because of https://github.com/ioam/holoviews/issues/1388, overlay_enabled must be True initially\n",
+    "    x0 = trench_points[0][trench_idx]\n",
+    "    x1 = trench_points[1][trench_idx]\n",
+    "    line = hv.Curve([x0 - bbox_ul, x1 - bbox_ul])\n",
+    "    if overlay_enabled:\n",
+    "        line = line.opts(style={\"color\": \"white\", \"alpha\": 0.5, \"line_width\": 1.5})\n",
+    "    else:\n",
+    "        line = hv.Overlay()  # line.opts(style={'alpha': 0.0, 'color': 'red'})\n",
+    "    return line\n",
+    "\n",
+    "\n",
+    "thumbnail_overlay = hv.DynamicMap(\n",
+    "    get_thumbnail_overlay, streams=[pointerx, kymo_overlay_stream]\n",
+    ")  # .opts(plot={'invert_yaxis': True})\n",
+    "\n",
+    "display(kymo_overlay_button)\n",
+    "# kymo_img * scrubber_line << (trench_thumbnail_img * thumbnail_overlay * cross_section_line) << (sharpness_plot * sharpness_scrubber)\n",
+    "# kymo_img * scrubber_line << (trench_thumbnail_img * cross_section_line) << (sharpness_plot * sharpness_scrubber)\n",
+    "trench_thumbnail_img * thumbnail_overlay"
    ]
   },
   {
