Refactored image viewer into functions. big_image_viewer reproduces previous image viewer.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/171223 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/171223 Prototyping.ipynb
@@ -736,6 +736,189 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "FrameStream = Stream.define(\"Frame\", t=0, v=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def frame_browser(frames, frame_stream):\n",
+    "    num_timepoints = len(frames_z.attrs[\"metadata\"][\"frames\"])\n",
+    "    num_fovs = len(frames_z.attrs[\"metadata\"][\"fields_of_view\"])\n",
+    "    t_slider = widgets.IntSlider(\n",
+    "        label=\"t\", min=0, max=num_timepoints, step=1, value=0, continuous_update=False\n",
+    "    )\n",
+    "    v_slider = widgets.IntSlider(\n",
+    "        min=0, max=num_fovs, step=1, value=0, continuous_update=False\n",
+    "    )\n",
+    "    slider_box = widgets.VBox([v_slider, t_slider])\n",
+    "    t_slider.observe(lambda change: frame_stream.event(t=change[\"new\"]), names=\"value\")\n",
+    "    v_slider.observe(lambda change: frame_stream.event(v=change[\"new\"]), names=\"value\")\n",
+    "    return slider_box"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.output?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def image_viewer(frames, frame_stream):\n",
+    "    channels = frames.attrs[\"metadata\"][\"channels\"]\n",
+    "    n_channels = len(channels)\n",
+    "    colors = [hex2color(channel_colors[channel]) for channel in channels]\n",
+    "    channel_boxes = []\n",
+    "    channel_widgets = []\n",
+    "    for channel in channels:\n",
+    "        solo_button = widgets.Button(\n",
+    "            description=\"S\", layout=widgets.Layout(width=\"10%\")\n",
+    "        )\n",
+    "        enabled_button = widgets.ToggleButton(description=channel, value=True)\n",
+    "        solo_button._button_to_enable = enabled_button\n",
+    "        color_picker = widgets.ColorPicker(concise=True, value=channel_colors[channel])\n",
+    "        channel_box = widgets.HBox([solo_button, enabled_button, color_picker])\n",
+    "        channel_widgets.append([solo_button, enabled_button, color_picker, channel_box])\n",
+    "    solo_buttons, enabled_buttons, color_pickers, channel_boxes = zip(*channel_widgets)\n",
+    "    channels_box = widgets.VBox(channel_boxes)\n",
+    "    max_val = 2**14  # TODO: infer\n",
+    "    DisplaySettings = Stream.define(\n",
+    "        \"DisplaySettings\", channel_enabled=np.array([True] * n_channels)\n",
+    "    )\n",
+    "    display_settings_stream = DisplaySettings()\n",
+    "\n",
+    "    def composite_image(t, v, channel_enabled):\n",
+    "        channel_imgs = [frames[v, c, t, :, :] for c in range(n_channels)]\n",
+    "        scaled_imgs = [\n",
+    "            channel_imgs[i][:, :, np.newaxis] / np.percentile(channel_imgs[i], 99.9)\n",
+    "            for i in range(n_channels)\n",
+    "        ]\n",
+    "        for scaled_img in scaled_imgs:\n",
+    "            np.clip(scaled_img, 0, 1, scaled_img)  # clip in place\n",
+    "        colored_imgs = [scaled_imgs[i] * np.array(colors[i]) for i in range(n_channels)]\n",
+    "        imgs_to_combine = [\n",
+    "            colored_imgs[i] for i in range(n_channels) if channel_enabled[i]\n",
+    "        ]\n",
+    "        if not len(imgs_to_combine):\n",
+    "            imgs_to_combine = [np.ones(colored_imgs[0].shape)]  # white placeholder\n",
+    "        img = imgs_to_combine[0]\n",
+    "        for img2 in imgs_to_combine[1:]:\n",
+    "            img = 1 - (1 - img) * (1 - img2)\n",
+    "        return hv.RGB(\n",
+    "            img, bounds=(-1, -1, 1, 1)\n",
+    "        )  # .opts(plot={'size': 250}, tools=[''])\n",
+    "\n",
+    "    def update_enabled_channels(change):\n",
+    "        channel_enabled = np.array([button.value for button in enabled_buttons])\n",
+    "        display_settings_stream.event(channel_enabled=channel_enabled)\n",
+    "\n",
+    "    def update_solo(solo_button):\n",
+    "        if (\n",
+    "            solo_button._button_to_enable.value\n",
+    "            and sum([b.value for b in enabled_buttons]) == 1\n",
+    "        ):\n",
+    "            for enabled_button in enabled_buttons:\n",
+    "                enabled_button.value = True\n",
+    "        else:\n",
+    "            for enabled_button in enabled_buttons:\n",
+    "                enabled_button.value = enabled_button == solo_button._button_to_enable\n",
+    "        # update_enabled_channels(None)\n",
+    "\n",
+    "    for solo_button in solo_buttons:\n",
+    "        solo_button.on_click(update_solo)\n",
+    "\n",
+    "    for enabled_button in enabled_buttons:\n",
+    "        enabled_button.observe(update_enabled_channels, names=\"value\")\n",
+    "    # for color_picker in color_pickers:\n",
+    "    #    color_picker.observe(update_image, names='value')\n",
+    "\n",
+    "    # hv.DynamicMap(composite_image, kdims=['t', 'v', 'channel_enabled']).select(t=0,v=0,channel_enabled=np.array([True,False,False,False,False]))\n",
+    "    image = hv.DynamicMap(\n",
+    "        composite_image, streams=[frame_stream, display_settings_stream]\n",
+    "    )\n",
+    "    regridded_image = regrid(image)\n",
+    "    return channels_box, regridded_image\n",
+    "\n",
+    "\n",
+    "def big_image_viewer(frames):\n",
+    "    frame_stream = FrameStream()\n",
+    "    slider_box = frame_browser(frames, frame_stream)\n",
+    "    channels_box, image = image_viewer(frames, frame_stream)\n",
+    "    image = image.opts(plot={\"width\": 500, \"height\": 500})\n",
+    "    output = widgets.Output()\n",
+    "    box = widgets.VBox([widgets.HBox([channels_box, slider_box]), output])\n",
+    "    display(box)\n",
+    "    with output:\n",
+    "        display(image)\n",
+    "    return None  # box\n",
+    "\n",
+    "\n",
+    "def mini_image_viewer(frames):\n",
+    "    channels_box, image = image_viewer(frames)\n",
+    "    output = widgets.Output()\n",
+    "    box = widgets.VBox([channels_box, output])\n",
+    "    display(box)\n",
+    "    with output:\n",
+    "        display(image)\n",
+    "    return None  # box\n",
+    "\n",
+    "\n",
+    "big_image_viewer(frames_z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hideCode": true
+   },
+   "outputs": [],
+   "source": [
+    "%%output size=250\n",
+    "mini_image_viewer(frames_z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
+   "outputs": [],
+   "source": [
+    "%%output size=250\n",
+    "mini_image_viewer(frames_z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hideCode": true
+   },
+   "outputs": [],
+   "source": [
     "%%opts Image (cmap='viridis')\n",
     "def scrubber_callback(t, y):\n",
     "    t = int(t)\n",
