First cut of process_frames.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/171225 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/171225 Prototyping.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Imports"
    ]
@@ -10,7 +12,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true,
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -47,32 +52,41 @@
     "import scipy.interpolate\n",
     "from holoborodko_diff import holo_diff\n",
     "import functools\n",
-    "from functools import partial\n",
-    "from itertools import zip_longest, product, count\n",
+    "import operator\n",
+    "from functools import partial, reduce\n",
+    "import itertools\n",
+    "from itertools import zip_longest\n",
     "from collections import Counter, defaultdict\n",
     "from bokeh.models import WheelZoomTool\n",
     "from bokeh.io import push_notebook, show, output_notebook\n",
     "\n",
     "# from bokeh.layouts import row\n",
     "# from bokeh.plotting import figure\n",
+    "import tqdm\n",
     "from tqdm import tnrange, tqdm_notebook"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true,
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "%load_ext line_profiler\n",
     "hv.notebook_extension(\"bokeh\")\n",
     "renderer = hv.renderer(\"bokeh\")\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "tqdm.monitor_interval = 0"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Config"
    ]
@@ -80,56 +94,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frames_z = zarr.open_array(\"/home/jqs1/scratch/fidelity/test/171018.zarr\", mode=\"r\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true,
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "store = zarr.DirectoryStore(\"/home/jqs1/scratch/fidelity/test/171018.2.zarr\")\n",
     "root_group = zarr.open_group(store=store)\n",
-    "raw_group = root_group[\"raw\"]\n",
-    "raw_group.attrs[\"metadata\"] = frames_z.attrs[\"metadata\"]\n",
-    "for v in tnrange(frames_z.shape[0]):\n",
-    "    ary = raw_group[str(v)]\n",
-    "    ary.attrs[\"metadata\"] = frames_z.attrs[\"metadata\"]\n",
-    "    for c in range(frames_z.shape[1]):\n",
-    "        for t in range(frames_z.shape[2]):\n",
-    "            ary[c, t] = frames_z[v, c, t]"
+    "raw_group = root_group[\"raw\"]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "compressor = Blosc(cname=\"zstd\", clevel=5, shuffle=Blosc.SHUFFLE, blocksize=0)\n",
-    "store = zarr.DirectoryStore(\"/home/jqs1/scratch/fidelity/test/171018.2.zarr\")\n",
-    "root_group = zarr.open_group(store=store)\n",
-    "raw_group = root_group.create_group(\"raw\")\n",
-    "for i in tnrange(frames_z.shape[0]):\n",
-    "    ary = raw_group.zeros(\n",
-    "        \"{:d}\".format(i),\n",
-    "        shape=frames_z.shape[1:],\n",
-    "        chunks=(1, 1, 512, 512),\n",
-    "        dtype=\"u2\",\n",
-    "        order=\"C\",\n",
-    "        compressor=compressor,\n",
-    "    )\n",
-    "    #"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true,
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "channel_to_color = {\n",
@@ -155,7 +137,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hidden": true
+    "hidden": true,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -206,7 +189,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hidden": true
+    "hidden": true,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -289,7 +273,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hidden": true
+    "hidden": true,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -345,7 +330,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hidden": true
+    "hidden": true,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -369,7 +355,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hidden": true
+    "hidden": true,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -493,7 +480,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hidden": true
+    "hidden": true,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -528,7 +516,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hidden": true
+    "hidden": true,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -553,7 +542,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hidden": true
+    "hidden": true,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -578,7 +568,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hidden": true
+    "hidden": true,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -632,7 +623,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hidden": true
+    "hidden": true,
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -653,7 +645,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "init_cell": true
+   },
    "outputs": [],
    "source": [
     "computed_group = root_group.require_group(\"computed\")"
@@ -665,7 +659,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(1, 2, 3) + (slice(None), slice(None))"
+    "# TODO: auto-detect destination shape by calling func on first element\n",
+    "\n",
+    "def process_frames(func, root_group, name, dtype=None):\n",
+    "    raw_group = root_group['raw']\n",
+    "    processed_group = root_group.require_group('computed/{}'.format(name))\n",
+    "    for pos_name, position in tqdm_notebook(raw_group.items()):\n",
+    "        if pos_name in processed_group:\n",
+    "            ary = processed_group[pos_name]\n",
+    "            if 'processed' and ary.attrs and ary.attrs['processed']:\n",
+    "                continue\n",
+    "        else:\n",
+    "            ary = processed_group.zeros_like(pos_name, position, shape=(), dtype=dtype)\n",
+    "            ary.attrs['processed'] = False\n",
+    "        _map_frames(position, ary, func)\n",
+    "        ary.attrs['processed'] = True\n",
+    "\n",
+    "def _map_timepoints(src, dest, func):\n",
+    "    for t in tnrange(dest.shape[-4]):\n",
+    "        \n",
+    "def _map_frames(src, dest, func):\n",
+    "    shape = src.shape[:-2]\n",
+    "    # SEE: https://stackoverflow.com/questions/32074543/how-to-get-the-length-of-an-itertools-product\n",
+    "    for idxs in tqdm_notebook(itertools.product(*[range(l) for l in shape]), total=reduce(operator.mul, shape)):\n",
+    "        dest[idxs] = func(src[idxs])"
    ]
   },
   {
@@ -674,20 +691,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_frames(func, root_group, name, dtype=None):\n",
-    "    raw_group = root_group[\"raw\"]\n",
-    "    processed_group = root_group.require_group(\"computed/{}\".format(name))\n",
-    "    for pos_name, position in tqdm_notebook(raw_group.items()):\n",
-    "        ary = processed_group.zeros_like(\n",
-    "            pos_name, position, dtype=dtype, overwrite=True\n",
-    "        )\n",
-    "        # ary[:] = func(position)\n",
-    "        _map_frames(position, ary, func)\n",
-    "\n",
-    "\n",
-    "def _map_frames(src, dest, func):\n",
-    "    for idxs in product(*[count(l) for l in src.shape[:-2]]):\n",
-    "        dest[idxs] = func(src[idxs])"
+    "del computed_group[\"hessian_k1\"]"
    ]
   },
   {
@@ -708,29 +712,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "frame_series = frames_z[0, 0, :, :, :]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
     "trench_points = get_image_series_trenches(frame_series, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "frame_series_k1 = np.zeros_like(frame_series, dtype=np.float32)  # TODO: fixed dtype\n",
-    "for i in range(frame_series.shape[0]):\n",
-    "    frame_series_k1[i, :, :] = hessian_eigenvalues(frame_series[i])[0]"
    ]
   },
   {
@@ -1181,6 +1163,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Initialization Cell",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
