First cut of process_positions (formerly process_frames) using map_ndarray.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180104 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180104 Prototyping.ipynb
@@ -715,10 +715,7 @@
     "            out[idxs] = new_ary\n",
     "        else:\n",
     "            out[idxs] = func(ary[idxs])\n",
-    "    return out\n",
-    "\n",
-    "\n",
-    "map_ndarray(lambda f: hessian_eigenvalues(f)[0], root_group[\"raw/0\"], axis=(0, 1))"
+    "    return out"
    ]
   },
   {
@@ -727,32 +724,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: auto-detect destination shape by calling func on first element\n",
-    "\n",
-    "\n",
-    "def process_frames(func, root_group, name, dtype=None):\n",
+    "def process_positions(func, root_group, name, axis=0, progress_bar=tqdm_auto):\n",
     "    raw_group = root_group[\"raw\"]\n",
     "    processed_group = root_group.require_group(\"computed/{}\".format(name))\n",
-    "    for pos_name, position in tqdm_notebook(raw_group.items()):\n",
+    "    res = None\n",
+    "    shape = None\n",
+    "    dtype = None\n",
+    "    for pos_name, position in progress_bar(raw_group.items()):\n",
     "        if pos_name in processed_group:\n",
     "            ary = processed_group[pos_name]\n",
+    "            shape = ary.shape\n",
+    "            dtype = ary.dtype\n",
     "            if \"processed\" and ary.attrs and ary.attrs[\"processed\"]:\n",
     "                continue\n",
     "        else:\n",
-    "            ary = processed_group.zeros_like(pos_name, position, shape=(), dtype=dtype)\n",
+    "            if shape is None or dtype is None:\n",
+    "                res = map_ndarray(func, position, axis=axis)\n",
+    "                shape = res.shape\n",
+    "                dtype = res.dtype\n",
+    "            ary = processed_group.zeros(pos_name, shape=shape, dtype=dtype)\n",
     "            ary.attrs[\"processed\"] = False\n",
-    "        # _map_frames(position, ary, func)\n",
-    "        map_ndarray(func, position, ary)\n",
+    "        if res is None:\n",
+    "            map_ndarray(func, position, axis=axis, out=ary)\n",
+    "        else:\n",
+    "            ary[:] = res\n",
+    "            res = None\n",
     "        ary.attrs[\"processed\"] = True\n",
-    "\n",
-    "\n",
-    "def _map_frames(src, dest, func):\n",
-    "    shape = src.shape[:-2]\n",
-    "    # SEE: https://stackoverflow.com/questions/32074543/how-to-get-the-length-of-an-itertools-product\n",
-    "    for idxs in tqdm_notebook(\n",
-    "        itertools.product(*[range(l) for l in shape]), total=reduce(operator.mul, shape)\n",
-    "    ):\n",
-    "        dest[idxs] = func(src[idxs])"
+    "    return processed_group"
    ]
   },
   {
@@ -770,8 +768,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k1 = process_frames(\n",
-    "    lambda f: hessian_eigenvalues(f)[0], root_group, \"hessian_k1\", dtype=np.float32\n",
+    "k1 = process_positions(\n",
+    "    lambda f: hessian_eigenvalues(f)[0], root_group, \"hessian_k1\", axis=(0, 1)\n",
     ")"
    ]
   },
